# python-realvalidation

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  __init__.py  realvalidation.py  requirements.txt  setup.cfg  setup.py
doc/: api.rst  conf.py  index.rst
doc/_build/doctrees/: api.doctree  environment.pickle  index.doctree
doc/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/realvalidation/: realvalidation.html
doc/_build/html/_sources/: api.rst.txt
doc/_build/html/_static/: documentation_options.js
realvalidation/: __init__.py  __main__.py  argparser.py  constants.py  errors.py  logger.py  realvalidation.py  utils.py  workbook.py
