[metadata]
name = realvalidation
author = Kaden Nelson
author-email = kaden@vermilion.tech
summary = Python package to interface with RealValidation DNC API.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/vermilion-tech/python-realvalidation
project_urls =
    Source Code = https://github.com/vermilion-tech/python-realvalidation
license = MIT
requires-python = >= 3
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[files]
packages =
    realvalidation

[options]
setup_requires =
    setuptools_scm
